--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "ada.projectFile": "/home/rissun57/Desktop/DSA/Ada/projects/helloworld/hello_world.gpr"
+   // "ada.projectFile": "/home/rissun57/Desktop/DSA/Ada/projects/helloworld/hello_world.gpr"
 }
